# groth16-casper-verifier

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci-casper-rust-contract.yml
client/: Cargo.toml
client/src/: client.rs  main.rs  utilities.rs
contract/: Cargo.toml
contract/src/: entry_points.rs  error.rs  final_exponentiation.rs  main.rs  miller_loop.rs  utils.rs
tests/: Cargo.toml
tests/src/: contract.rs  lib.rs  tests.rs  utilities.rs
