[package]
name = "contract"
description = "zk-SNARK Casper example contract"
version = "0.1.0"
authors = ["The Arcadia Group"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract = { package = "casper-contract", version="=1.4.3" }
types = { package = "casper-types", version="=1.4.5" }
hex = "0.4.3"
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
ark-groth16 = { version = "0.3.0", default-features = false}
ark-std = { version = "^0.3.0", features = ["std"]}
ark-ff = { version = "^0.3.0", default-features = false}
ark-ec = { version = "^0.3.0", default-features = false}
ark-bn254 = { version = "0.3.0", features = ["curve"]}
num-traits = "0.2.14"
arrayref = "0.3.6"

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["contract/std", "types/std"]
